    - Default to current development release if no release is specified on
      commandline
    - Correct bug supervisor team to ubuntu-bugcontrol (LP: #374563)
    - Remove team names from sponsorship message - makes the function much
      simpler
  * buildd
    - Check if user has upload privileges instead of checking for team
      membership when seeing if operations are permitted 

 -- Iain Lane <laney@ubuntu.com>  Sun, 10 May 2009 19:13:34 +0100

ubuntu-dev-tools (0.73) karmic; urgency=low

  [ Siegfried-Angel Gevatter Pujals ]
  * pbuilder-dist:
    - Fallback to calling lsb_release if /etc/lsb-release doesn't
       exist; this makes it possible to run pbuilder-dist on Debian.

  [ Nathan Handler ]
  * pull-debian-source:
    - Use Getopt::Long

  [ Colin Watson ]
  * submittodebian:
    - New release cycle; use "karmic" usertag.
  * dch-repeat:
    - Drop EOLed gutsy and add karmic.
  * pull-lp-source:
    - Set default release to karmic.
  * reverse-build-depends:
    - Set default release to karmic.
  * bash_completion/pbuilder-dist:
    - Add karmic.
    - Add squeeze.
  * requestsync:
    - Send a "Content-Type: text/plain; charset=UTF-8" header (LP: #246307).

  [ Daniel Hahler ]
  * grab-merge: Output error message in case wget/rsync fails.

 -- Daniel Hahler <ubuntu@thequod.de>  Thu, 30 Apr 2009 22:18:38 +0200

ubuntu-dev-tools (0.72) jaunty; urgency=low

  [ Jonathan Davies ]
  * README.updates: Added - lists steps to take when updating this package.
  * grab-merge: Added --help option and manpage (LP: #349109).

  [ Siegfried-Angel Gevatter Pujals ]
  * pbuilder-dist:
     - Add squeeze as a Debian distribution. Thanks to Marco Rodrigues.

  [ Nathan Handler ]
  * pull-debian-source:
    - Add support for etch/oldstable
    - Make script work for codenames (etch, lenny, squeeze, sid)

  [ Ryan Kavanagh ]
  * Ported devscripts' build-rdeps to Ubuntu and replaced
    reverse-build-depends. Updated it's manpage. (LP: #272273)

  [ Kees Cook ]