@@ -30,6 +30,10 @@ ubuntu-dev-tools (0.74) UNRELEASED; urgency=low
     - Check if user has upload privileges instead of checking for team
       membership when seeing if operations are permitted 
 
+  [ Anders Kaseorg ]
+  * ubuntutools/lp/functions.py:
+    - Simplify isLPTeamMember.
+
  -- Iain Lane <laney@ubuntu.com>  Sun, 10 May 2009 19:13:34 +0100
 
 ubuntu-dev-tools (0.73) karmic; urgency=low
